# realworld-leptos

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.deploy  Dockerfile.onrender  README.md  docker-compose.yml
.sqlx/: query-076e1562ebde1e5f0feb02eec26900d652b9a0dd3733072e035606bbf0738de0.json  query-114b5e103943f1ee25f492131841b3bec6df847d4bc1cb1c9e22c6d415238c3b.json  query-16193564215940ab3863850459f2f0b1601692d6ad83854fa43045d7483bba7b.json  query-1be3896565547150fcaca294a4415a9986c364d3e4706f209ef89d39870f275c.json  query-1e8a6cf21890127a071dab6e2cc9c7b5ea6b3c7724be5d3f40594abe2eb0da5c.json  query-509ab0ee98ae1e804a3ac6a78dd62bfd18c221049162b34953f16fb8bb98e9dd.json  query-5d537ebae9141f6dcd5c7fd397f4b8aee2737bd8754f1764171ec81c20ae5509.json  query-627e62b1a68eaad23ee97d98d39ea08b4a59f1cfb4986da1a981531cbe90a3f8.json  query-77396dceeed414ae8789f8ec409271110cac715ade1bd36921f2c8021c9db0d4.json  query-892337f9c289d3a54782f85af6f60eb2c346afb9ebfabb21b5f988b58328582f.json  query-8a8c3a0107e207557d845174cd17a253931b4f8f9682d82ddfd768e32a79e9c6.json  query-9a498ed98a10f033ca1d41c2004d7fe7b9a9ebec821a5194c20ef552a529b02f.json  query-a3e3e0e4f80ae83ac4e775c9177a4e99eac041f5d734d44f329f5f243e5a41ca.json  query-a464fff5ad4fa7b7526d063c1d8681a2929e9fd657e4303b0af80a357d97fef9.json  query-b08930e76e94814ab091011fec4e351f845858e3b8631795eddea763eb932b5a.json  query-cfe53c0aa11dc6361eee6913819c73761ab0c8355b6b2b73ed840322e565cd08.json  query-d0bff2016f68fa8b5bb258c63b60b053afb8c02f530cf18fe4b8da2c0c7956bc.json  query-d995d93fce28f1b120ae95fba1b8cc338a2771f19fd555ccbbf4eb0f4ea08ae7.json  query-dafe0ca4b92e7ee20a60d8b1da46d647b2368dffc2778a6c8136d6bb23011cb3.json  query-def266669f865c31c9aedc3c441c851ad5dce104d9e8ad3866266fecb7540520.json  query-ee1de2c8f0a9e4c47be3bc5ad3df0d45c95b12a84244eaeae6f09975e9d4f80c.json  query-f413bc30f880e4bf725a5cec7d35cd1f39689f56caf0c79c85caa39096754bf8.json  query-f4be6a4f478a95d56fec6627d6dcb034b74386c56145aab74c661d36805e004f.json  query-f5ec9c2e3b68c2e6c42fc6ce8b71c67c47e82587575777b197919a9843aa7bb5.json
end2end/: package-lock.json  package.json
end2end/tests/: example.spec.ts
js/: jwt.js  utils.js
migrations/: 20221207194615_init.down.sql  20221207194615_init.up.sql
src/: app.rs  auth.rs  database.rs  files.rs  lib.rs  main.rs  setup.rs
src/auth/: api.rs  client.rs  mod.rs  server.rs
src/components/: article_preview.rs  buttons.rs  mod.rs  navitems.rs
src/models/: article.rs  article_preview.rs  comment.rs  mod.rs  pagination.rs  user.rs
src/routes/: article.rs  editor.rs  home.rs  login.rs  mod.rs  profile.rs  reset_password.rs  settings.rs  signup.rs
style/: main.scss
